tests/e2e/pass/v2_array_literal_u8.ep
# EXIT: 66
fun run(): i64 {
    let bs = new u8[] { u8(65), u8(66) }
    ret i64(bs[1])
}

fun main(): void {
    exit(run())
}
