tests/e2e/fail/v4_cstr_invalid.ep
# EXIT: 1
# STDOUT: panic line 4: invalid cstr
fun main(): void {
    let p = cstr(str(new u8[] { u8(65), u8(0), u8(66) }))
    exit(0)
}
